<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/settings_tv"
        style="@style/fragment_name_ts"
        android:text="@string/settings_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#C6C6C6"
        app:layout_constraintBottom_toTopOf="@id/layout_1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@id/settings_tv">

        <TextView
            style="@style/settings_tvs_style"
            android:text="@string/share_this_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            style="@style/stroke_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#C6C6C6"
        app:layout_constraintBottom_toTopOf="@id/layout_2"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/layout_1">

        <TextView
            style="@style/settings_tvs_style"
            android:text="@string/rate_us"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            style="@style/stroke_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#C6C6C6"
        app:layout_constraintBottom_toTopOf="@id/layout_3"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/layout_2">

        <TextView
            style="@style/settings_tvs_style"
            android:text="@string/leave_feedback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            style="@style/stroke_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#C6C6C6"
        app:layout_constraintBottom_toTopOf="@id/layout_4"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/layout_3">

        <TextView
            style="@style/settings_tvs_style"
            android:textColor="#BE52F2"
            android:text="@string/clear_history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            style="@style/stroke_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#C6C6C6"
        app:layout_constraintTop_toBottomOf="@id/layout_4"/>

    <TextView
        android:id="@+id/app_version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/version"
        android:textColor="#A6A6A6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>

